MDEV-14076 InnoDB: Failing assertion when accessing INFORMATION_SCHEMA.INNODB_SYS_TABLESPACES upon upgrade from 10.1.0 to 10.1.20

i_s_dict_fill_sys_tablespaces(): Adjust the tablespace flags if needed.